@@ -1,59 +1,61 @@
 package com.example.board.config;
 
-import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configurers.CsrfConfigurer;
+import org.springframework.security.config.annotation.web.configurers.HttpBasicConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.web.DefaultSecurityFilterChain;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
-@RequiredArgsConstructor
 public class WebConfiguration {
 
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
-
-    private final JwtExceptionFilter jwtExceptionFilter;
+    @Autowired
+    private JwtExceptionFilter jwtExceptionFilter;
+    @Autowired private JwtAuthenticationFilter jwtAuthenticationFilter;
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration corsConfiguration = new CorsConfiguration();
-        corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000", "http://127.0.0.1:3000"));
-        corsConfiguration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
-        corsConfiguration.setAllowedHeaders(List.of("*"));
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowedOrigins(
+                Arrays.asList("http://localhost:3000", "http://127.0.0.1:3000"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PATCH", "DELETE"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/v1/**", corsConfiguration);
+        source.registerCorsConfiguration("/api/v1/**", configuration);
         return source;
     }
 
+    // SpringBootWebSecurityConfiguration 커스터마이징
     @Bean
     SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-
-        http.cors(Customizer.withDefaults()) //
-                .authorizeHttpRequests((requests) ->
-                        requests
-                                .requestMatchers(HttpMethod.POST,"/api/v1/users/**")
-                                .permitAll()
-                                .anyRequest()
-                                .authenticated()) //모든 request에서 인증처리를 할껀데
-                .sessionManagement((session) -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                // 사용자 인증과 관련된 세션의 경우에는 우리가 REST API를 개발하기 때문에 이 세션 자체가 필요하지 않다. -->> 세션이 생성되지 않게끔 설정해둠
-                .csrf(CsrfConfigurer::disable) //csrf는 아예 제외를 시켜주고
+        http.cors(Customizer.withDefaults())
+                .authorizeHttpRequests(
+                        (requests) ->
+                                requests
+                                        .requestMatchers(HttpMethod.POST, "/api/*/users", "/api/*/users/authenticate")
+                                        .permitAll()
+                                        .anyRequest()
+                                        .authenticated())
+                .sessionManagement(
+                        (session) -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .csrf(CsrfConfigurer::disable)
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class)
                 .addFilterBefore(jwtExceptionFilter, jwtAuthenticationFilter.getClass())
-                .httpBasic(Customizer.withDefaults()); //(포스트맨)basic auth를 사용할 것 이고
+                .httpBasic(HttpBasicConfigurer::disable);
 
-        DefaultSecurityFilterChain build = http.build();
-        return build;
+        return http.build();
     }
 }
